--- a/optemus-tech/styles.css
+++ b/optemus-tech/styles.css
@@ -1,7 +1,78 @@
 :root{
-    --fonte: "Inter"
+    --fonte: 'Inter';
     --cor-titulo: #101828;
     --cor-secundaria: #667085;
     --vermelho: #8E2424;
 }
 
+body {
+    background-color: #fff;
+    font-family: var(--fonte);
+    font-size: 20px;
+    font-weight: 400;
+    width: 100%;
+    height: 100vh;
+}
+
+.navbar {
+    display: flex;
+    padding: 1em;
+    justify-content: space-around;
+}
+
+.navbar__logo {
+    display: flex;
+    align-items: center;
+    padding-left: 1em;
+}
+
+.navbar__logo-img {
+    padding: 0.3em;
+}
+
+.navbar__logo-texto {
+    font-size: 18px;
+    font-weight: 500;  
+}
+
+.navbar__lista {
+    display: flex;
+    align-items: center;
+}
+
+.navbar__lista-item {
+    padding: 0 0.3em 0.3em;
+    margin: 0 0.3em;
+}
+
+.navbar__lista-link {
+    font-size: 16px;
+    font-weight: 400;
+    text-decoration: none;
+    color: var(--cor-secundaria); 
+}
+
+.navbar__botoes {
+  display: flex;
+  align-items: center;
+  padding-left: 12em;
+}
+
+.navbar__botoes-entrar {
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--cor-secundaria);
+    text-decoration: none;
+    padding: 0.7em;
+}
+
+.navbar__botoes-cadastrar {
+    font-size: 16px;
+    font-weight: 500;
+    color: #fff;
+    text-decoration: none;
+    padding: 0.8em 0.7em;
+    background-color: var(--vermelho);
+    border-radius: 8px;
+    margin-left: 0.7em;
+}
