--- a/optemus-tech/styles.css
+++ b/optemus-tech/styles.css
@@ -76,3 +76,29 @@ body {
     border-radius: 8px;
     margin-left: 0.7em;
 }
+
+.banner {
+    text-align: center;
+    padding-top: 3em;
+}
+
+.banner__titulo {
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--vermelho); 
+}
+
+.banner__subtitulo {
+    font-size: 48px;
+    font-weight: 600;
+    color: var(--cor-titulo); 
+    margin: 0.7em 0;   
+}
+
+.banner__descricao {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    color: var(--cor-secundaria);
+    padding: 0 15em;  
+}
