--- a/optemus-tech/styles.css
+++ b/optemus-tech/styles.css
@@ -251,3 +251,57 @@ body {
     padding-bottom: 4em;
 }
 
+.rodape {
+    background-color: #F9FAFB;
+    text-align: center;
+    padding: 3em;
+}
+
+.rodape__titulo {
+    font-size: 36px;
+    font-weight: 600;
+    padding: 0.5em 0 0 0;
+}
+
+.rodape__descricao {
+    font-size: 20px;
+    font-weight: 400;
+    color: var(--cor-secundaria);
+    padding: 1em;
+}
+
+.rodape__input {
+    padding: 1em;
+}
+
+.rodape__input--email {
+    width: 29%;
+    padding: 1em 0em;
+    border: 1px solid #EAECF0;
+    border-radius: 8px;
+}
+
+.rodape__input--email::placeholder {
+    font-family: 'Inter';
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--cor-secundaria);
+    padding-left: 1em;
+}
+
+.rodape__input--botao {
+    padding: 0.76em 1em;
+    font-size: 16px;
+    font-weight: 500;
+    border: none;
+    background-color: var(--vermelho);
+    color: #FFF;
+    border-radius: 8px;
+}
+
+.rodape__direitos {
+    font-size: 16px;
+    font-weight: 400;
+    color: #98A2B3;
+    padding: 0.5em;
+}
